--- a/ExerciseManagement - IntelliJ/pom.xml
+++ b/ExerciseManagement - IntelliJ/pom.xml
@@ -17,6 +17,12 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <version>2.7.0</version>
+        </dependency>
     </dependencies>
     
 </project>
